Fixed alignment issue

--- a/themes/darkly/Lemmy_monero_dark.css
+++ b/themes/darkly/Lemmy_monero_dark.css
@@ -107,9 +107,6 @@ body {
     padding-left: 10px;
     background-color: var(--lwhite);
 }
-.my-2 {
-    margin-bottom: 0px!important;
-}
 .btn-outline-secondary:not(:disabled):not(.disabled).active {
     background-color: var(--pri);
     border-color: var(--pri);
