--- a/themes/lemmy_css.user.css
+++ b/themes/lemmy_css.user.css
@@ -187,9 +187,6 @@
         a:visited .d-inline-block {
             color:var(--lgray-dark)!important;
         }
-        .my-2 {
-            margin-bottom: 0px!important;
-        }
         .btn-outline-secondary:not(:disabled):not(.disabled).active {
             background-color: var(--pri);
             border-color: var(--pri);
@@ -494,9 +491,6 @@
             .comments {
                 padding-left: 10px;
                 background-color: var(--lwhite);
-            }
-            .my-2 {
-                margin-bottom: 0px!important;
             }
             .btn-outline-secondary:not(:disabled):not(.disabled).active {
                 background-color: var(--pri);
